--- a/web/W02/w02style.css
+++ b/web/W02/w02style.css
@@ -20,6 +20,24 @@ li {
     float: top;
 }
 
+li.hide_me {
+    float: top;
+}
+
+li.hide_me a {
+    display: inline-block;
+    color: lightgrey;
+    text-align: center;
+    padding: 16px;
+    cursor: not-allowed;
+}
+
+li.hide_me a:hover {
+    background-color: gray;
+    color: #FFFFFF;
+}
+
+
 li a {
     display: inline-block;
     color: black;
@@ -45,5 +63,10 @@ h2 {
 p {
     margin: 20px;
     padding-right: 20px;
+}
+
+.timestamp {
+    font-size: smaller;
+    font-style: italic;
 }
 
